--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          components: rust-src
       - name: Setup WASM
         uses: jetli/wasm-pack-action@v0.4.0
       - name: Test Native & WASM
